--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   },
   "dependencies": {
     "@mdx-js/mdx": "^1.5.1",
-    "@mdx-js/tag": "^0.20.3",
-    "gatsby-mdx": "^1.0.0",
+    "@mdx-js/react": "^1.5.1",
+    "gatsby-plugin-mdx": "^1.0.55",
     "gatsby-source-filesystem": "^2.1.35"
   }
 }
