--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
   "keywords": [
     "gatsby",
     "gatsby-theme",
+    "gatsby-plugin",
     "react",
-    "codex"
+    "codex",
+    "notes"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jakewies/gatsby-theme-codex.git"
+  },
+  "homepage": "https://github.com/jakewies/gatsby-theme-codex#gatsby-theme-codex",
   "devDependencies": {
     "gatsby": "^2.17.7",
     "react": "^16.11.0",
