feat: add theme-ui

--- a/package.json
+++ b/package.json
@@ -19,19 +19,22 @@
   },
   "homepage": "https://github.com/jakewies/gatsby-theme-codex#gatsby-theme-codex",
   "devDependencies": {
-    "gatsby": "^2.17.7",
+    "gatsby": "^2.17.9",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
   },
   "peerDependencies": {
-    "gatsby": "^2.17.7",
+    "gatsby": "^2.17.9",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.22",
     "@mdx-js/mdx": "^1.5.1",
     "@mdx-js/react": "^1.5.1",
     "gatsby-plugin-mdx": "^1.0.55",
-    "gatsby-source-filesystem": "^2.1.35"
+    "gatsby-plugin-theme-ui": "^0.2.43",
+    "gatsby-source-filesystem": "^2.1.35",
+    "theme-ui": "^0.2.46"
   }
 }
